--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.jpg">
-    <title>nice MTB photos</title>
+    <title>MTB</title>
 </head>
 <body>
     <div class="scott">
